[package]
name = "hwi"
version = "0.7.0"
authors = ["Daniela Brozzoni <danielabrozzoni@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Rust wrapper for the Bitcoin Core Hardware Wallet Interface."
repository = "https://github.com/bitcoindevkit/rust-hwi"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.28.0" }
base64 = "0.21.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
pyo3 = { version = "0.17.3", features = ["auto-initialize"] }

miniscript = { version = "10.0", features = ["serde"], optional = true }

[dev-dependencies]
serial_test = "0.6.0"

[features]
doctest = []
